# IoT-based-real-time-energy-monitoring-system

./: .gitignore  .replit  README.md  anomaly_detection.py  api_client.py  api_server.py  app.py  config.py  dashboard_components.py  data_simulator.py  energy_data.json  esp32_example.ino  pyproject.toml  simulate_esp32.py  utils.py
