[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "streamlit>=1.44.0",
    "uvicorn>=0.34.0",
]
